# Notearcadex_rust_framework

./: README.md
v1/: .env  Cargo.toml  framework.db  mining_server.db  notarcadex.db
v1/src/: lib.rs  login_handler.rs  main.rs  mod.rs  ws_login.rs
v1/static/: index.html
v1/static/js/: main.js  ws_functions.js  ws_funtions.js
v1/static/pages/: login.html  projects.html
v2/: .env  Cargo.toml  framework.db  mining_server.db
v2/client/: Cargo.toml
v2/client/src/: webgpu.rs
v2/server/: framework.db
v2/server/src/: main.rs  ws_login.rs
v2/src/: lib.rs  login_handler.rs  mail.rs  main.rs  ws_login.rs
v2/static/: index.html
v2/static/css/: style.css
v2/static/js/: main.js  webgpu.js  ws_functions.js  ws_funtions.js
v2/static/pages/: login.html  projects.html  sandbox.html
v3/: Cargo.toml  framework.db
v3/src/: login_handler.rs
v3/static/css/: style.css
v3/static/js/: app_initializer.js  main.js  webgpu.js  ws_functions.js
v3/static/js/app_modules/: animation_manager.js  camera_setup.js  controls_manager.js  event_manager.js  gui_controls(temp).js  lighting_setup.js  model_loader.js  renderer_setup.js  scene_manager.js
v3/static/js/three_modules/: EXRLoader.js
v3/static/models/: Floor_array.glb  GPU.glb
v3/static/pages/: login.html  projects.html  sandbox.html
v4/: .env  framework.db
v4/src/: lib.rs  login_handler.rs  main.rs
v4/static/js/: main.js
v4/static/pages/: projects.html
