[package]
name = "web_rust_framework"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix = "0.13.0"
actix-files = "0.6"
actix-web-actors = "4.0.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
bcrypt = "0.11"
chrono = "0.4"
lettre = "0.10.0-rc.3"