[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window", "HtmlCanvasElement"] }
wgpu = { version = "0.14", features = ["webgl"] }
winit = { version = "0.25.0", features = ["web-sys"] }
wasm-bindgen-futures = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 'z'